--- a/servicio/templates/login/login.html
+++ b/servicio/templates/login/login.html
@@ -21,6 +21,7 @@
                             <h3>LOGIN</h3>
                             <br>
                             <img src="{% static 'img/logoEmpresa.jpg' %}" alt="Logo" width="160" height="160">
+                            <img src="{% static 'img/logo.jpg' %}" alt="Logo" width="160" height="160">
                             <br><br>
                             <div class="form-outline mb-4">
                                 <input type="text" class="form-control me-2" id="id_rut" name="username" placeholder="Rut" required autocomplete="off" onclick="showKeyboard('id_rut')">
